--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,13 @@
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/customer_db
+    username: root
+    password: 420
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+      format_sql: true
+    hibernate:
+      ddl-auto: update
