--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,20 @@
 
+
+
+
+
+ spring.datasource.url=jdbc:mysql://localhost:3306/customer_db
+
+ spring.datasource.username=root
+ spring.datasource.password=420
+
+
+
+
+ spring.jpa.show-sql=true
+ spring.jpa.properties.hibernate.format_sql=true
+ spring.jpa.hibernate.ddl-auto=update
+
+
+
+
