--- a/application.properties
+++ b/application.properties
@@ -14,6 +14,7 @@
  spring.jpa.show-sql=true
  spring.jpa.properties.hibernate.format_sql=true
  spring.jpa.hibernate.ddl-auto=update
+ eureka.client.service-url.defaultZone=http://localhost:5555/eureka
 
 
 
